--- a/npc-dialogue-app/backend/package.json
+++ b/npc-dialogue-app/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "elevenlabs-node": "^1.2.0",
     "express": "^4.21.2",
+    "node-fetch": "^2.7.0",
     "openai": "^4.89.0"
   }
 }
