Update .gitignore to exclude NPC images and add documentation

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ npc-dialogue-app/backend/data/
 
 # Virtual environments
 .venv
+
+# NPC Images (large binary files)
+npc-dialogue-app/backend/images/
