ding and refresh interest somehow

--- a/npc-dialogue-app/backend/config/npc-config.json
+++ b/npc-dialogue-app/backend/config/npc-config.json
@@ -1,6 +1,6 @@
 {
     "systemPrompt": {
-        "template": "You are {name}. {description} {personality} You are currently in {currentScene}. Game Context: {gameContext}\n\nKeep responses concise (2-3 sentences) but meaningful, focusing on staying in character while providing accurate information when asked about specific D&D rules or lore. Reference previous parts of the conversation when relevant."
+        "template": "You are {name}. {description} {personality} You find yourself {currentScene}.\n\nWhat you know:\n{whatTheyKnow}\n\nPitfalls:\n{pitfalls}\n\nMotivations:\n{motivations}\n\nKeep responses concise (2-3 sentences) but meaningful, focusing on staying in character while providing accurate information when asked about specific D&D rules or lore. Reference previous parts of the conversation when relevant."
     },
     "providers": {
         "voice": {
@@ -12,6 +12,64 @@
                     "use_speaker_boost": true
                 }
             }
+        }
+    },
+    "responseTriggers": {
+        "motivationAppeal": {
+            "pattern": "<applied to motivation:",
+            "actions": [
+                {
+                    "type": "sound",
+                    "effect": "ding"
+                },
+                {
+                    "type": "stat",
+                    "target": "interest",
+                    "operation": "increase",
+                    "value": 1
+                },
+                {
+                    "type": "track",
+                    "target": "motivations",
+                    "operation": "mark_appealed"
+                }
+            ]
+        }
+    },
+    "conversationState": {
+        "trackedMotivations": [],
+        "clearOnReset": true
+    },
+    "attitudes": {
+        "hostile": {
+            "interest": 1,
+            "patience": 2,
+            "description": "Openly hostile and aggressive towards the players"
+        },
+        "suspicious": {
+            "interest": 2,
+            "patience": 2,
+            "description": "Wary and distrustful of the players"
+        },
+        "neutral": {
+            "interest": 2,
+            "patience": 3,
+            "description": "Neither friendly nor hostile, taking a wait-and-see approach"
+        },
+        "open": {
+            "interest": 3,
+            "patience": 3,
+            "description": "Willing to engage but not fully trusting"
+        },
+        "friendly": {
+            "interest": 3,
+            "patience": 4,
+            "description": "Generally well-disposed towards the players"
+        },
+        "trusting": {
+            "interest": 3,
+            "patience": 5,
+            "description": "Fully trusts and is receptive to the players"
         }
     }
 } 
