--- a/npc-dialogue-app/backend/package.json
+++ b/npc-dialogue-app/backend/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "backend",
+  "name": "npc-dialogue-app-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for NPC Dialogue App",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "elevenlabs-node": "^1.2.0",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "node-fetch": "^2.7.0",
     "openai": "^4.89.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
