Added authentication and NPC ownership

--- a/npc-dialogue-app/backend/.env.example
+++ b/npc-dialogue-app/backend/.env.example
@@ -1,6 +1,32 @@
+PORT=3000
+NODE_ENV=production
+
 # OpenAI API Key for GPT-4 and DALL-E
 OPENAI_API_KEY=your_openai_api_key_here
 
 # ElevenLabs API Key and Voice ID
 ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 ELEVENLABS_VOICE_ID=your_voice_id_here  # Create a voice at elevenlabs.io and paste its ID here 
+# Backend Environment Example
+
+# JWT and Session
+JWT_SECRET=your-super-secret-jwt-key
+SESSION_SECRET=your-super-secret-session-key
+
+# MongoDB Atlas
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/npc-dialogue-app?retryWrites=true&w=majority
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Frontend URL (for CORS and OAuth redirects)
+FRONTEND_URL=https://drive-my-char.netlify.app
+
+# Enable authentication (set to true in production)
+ENABLE_AUTH=true
+
+# Cloudinary (optional, for image hosting)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
